turn off watch task around TrackDrag(), r=sfraser bug 53121.